--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,16 @@ header{
     width: 40%;
 }
 
+section h2{
+    padding-bottom: 20px;
+}
+
+.testo-secondario{
+    max-width: 300px;
+    height: 360px;
+    padding: 0px 40px;
+}
+
 /* footer */
 
 footer{
